fix css for perfect display on firefox

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -23,7 +23,7 @@ body {
 
 .span4 {
     background-color: #FFF;
-    height: 300px;
+    height: 350px;
     margin: 4px!important;
     padding: 10px;
     border-color: #999;
@@ -36,10 +36,15 @@ body {
     -webkit-box-shadow: 8px 9px 20px rgba(0, 0, 0, 0.74);
 }
 
-.thumbnail img {
-     height: 50%;
-}
-
 .span8 .thumbnail .img {
      height: 300px;
+}
+
+.thumbnail img {
+     height: 50%;
+     max-height: 200px;
+}
+
+h4 {
+    margin: 10px;
 }
